crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_to_utf8(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new(
	RustCallStatus* out_status
);
uint32_t ffi_servicepoint_binding_uniffi_uniffi_contract_version(
	RustCallStatus* out_status
);