crates/servicepoint_binding_uniffi/libraries/csharp/ServicePoint/servicepoint_binding_uniffi.cs


    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_to_utf8(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_command_utf8_data(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern ushort uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new(
    );

    [DllImport("servicepoint_binding_uniffi")]
    public static extern uint ffi_servicepoint_binding_uniffi_uniffi_contract_version(
    );

    

    static void uniffiCheckContractApiVersion() {
        var scaffolding_contract_version = _UniFFILib.ffi_servicepoint_binding_uniffi_uniffi_contract_version();
        if (24 != scaffolding_contract_version) {
            throw new UniffiContractVersionException($"ServicePoint: uniffi bindings expected version `24`, library returned `{scaffolding_contract_version}`");
        }
    }
